RESOLVED FIXED 59888
[android] OS(ANDROID) does not imply PLATFORM(ANDROID)
https://bugs.webkit.org/show_bug.cgi?id=59888
Summary [android] OS(ANDROID) does not imply PLATFORM(ANDROID)
Holger Freyther
Reported 2011-05-01 13:55:47 PDT
It is possible to build other ports for the Android Operating System as well. PLATFORM(ANDROID) should not be automatically enabled.
Attachments
Patch (1.32 KB, patch)
2011-05-01 13:59 PDT, Holger Freyther
steveblock: review+
Holger Freyther
Comment 1 2011-05-01 13:59:41 PDT
Adam Barth
Comment 2 2011-05-11 20:47:01 PDT
Comment on attachment 91840 [details] Patch That makes a lot of sense. It's probably a good idea to double-check with Steve Block before landing.
Steve Block
Comment 3 2011-05-12 01:59:33 PDT
Comment on attachment 91840 [details] Patch Thanks Adam and Holger. This looks correct to me. Assuming that Adam's r- was just to give me chance to have a look, r+
Adam Barth
Comment 4 2011-05-12 10:04:34 PDT
> Assuming that Adam's r- was just to give me chance to have a look, r+ It was actually just a mis-click. :)
Holger Freyther
Comment 5 2011-05-13 08:09:47 PDT
Landed in r86432.
Note You need to log in before you can comment on or make changes to this bug.