[android] OS(ANDROID) does not imply PLATFORM(ANDROID)

https://bugs.webkit.org/show_bug.cgi?id=59888

It is possible to build QtWebKit and others for OS(ANDROID). Let
the buildsystem decide which platform is to be build.

Canonical link: https://commits.webkit.org/76087@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86432 268f45cc-cd09-0410-ab3c-d52691b4dbfc